v1.4: when downloading or uploading files in Community Dungeons, it now shows only the progress rather than the file names that have been processed